# hchiam

./: .gitignore  README.md  animation-in-a-readme.md  deploy_to_pypi.sh  deploy_to_test_pypi.sh  example_usage.py  pyproject.toml  update_version.py
src/hchiam/: __init__.py
tests/: __init__.py
